--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -15,7 +15,7 @@ jobs:
           token: NOT_NEEDED
           base: ""
           plugin_wakatime: yes
-          plugin_wakatime_days: ${{ '30' }}
+          plugin_wakatime_days: 30
           plugin_wakatime_limit: 3
           plugin_wakatime_sections: time, projects-graphs, languages, os
           plugin_wakatime_token: ${{ secrets.WAKATIME }}
