--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -13,6 +13,8 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME }}
           GH_TOKEN: ${{ secrets.SECRET }}
+          SHOW_LINES_OF_CODE: False
+          SHOW_COMMIT: False
           SHOW_LINES_OF_CODE: True
           SHOW_TOTAL_CODE_TIME: False
           SHOW_PROFILE_VIEWS: False
@@ -20,5 +22,6 @@ jobs:
           SHOW_PROJECTS: False
           SHOW_TIMEZONE: False
           SHOW_EDITORS: False
+          SHOW_LANGUAGE_PER_REPO: False
           SHOW_SHORT_INFO: False
           SHOW_LOC_CHART: False
